# keeprust

./: .gitignore  Cargo.toml  keeprust.krs
src/: main.rs
src/cli/: app.rs  commands.rs  mod.rs
src/crypto/: cipher.rs  key_derivation.rs  mod.rs
src/models/: database.rs  entry.rs  group.rs  mod.rs  repository.rs
src/utils/: clipboard.rs  mod.rs  password_analyzer.rs  password_generator.rs
